src/test/resources/public/input/typechecking/pass/pass_Magda03.jova
// Compare classes
class Test1 {
}

class Test2 {
}

class Test3 {
}

class Cls{

	public Test1 func(int x){

	    Test1 t;
	    Test1 t1;
	    Test2 s;
	    Test3 u;
	    Test3 u1;
	    int a;

	    t = new Test1;
	    t1 = new Test1;
	    s = new Test2;
	    u = new Test3;
	    u1 = new Test3;

	    if(t == t1){

	    }

        if(s != nix){

        }

	    while(u != u1) {
	        a = 0;
	    }

		return t;
	}
}